--- a/about.html
+++ b/about.html
@@ -21,8 +21,8 @@
         <a class="navbar-brand" href="index.html">第95回全国高校野球選手権記念大会</a>
         <div class="nav-collapse collapse">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="index.html">主页</a></li>
-            <li><a href="#">关于</a></li>
+            <li><a href="index.html">主页</a></li>
+            <li class="active"><a href="#">关于</a></li>
             <li><a href="past.html">来年</a></li>
             <li><a href="next.html">突破</a></li>
           </ul>
@@ -69,28 +69,28 @@
                         </ul>
                     </div><!-- /btn-group -->
                     <div class="btn-group">
-                        <button type="button" class="btn btn-primary">1. Game Winner</button>
+                        <button type="button" class="btn btn-primary">一回戦突破</button>
                         <button type="button" class="btn btn-success dropdown-toggle" data-toggle="dropdown"><span class="caret"></span></button>
                         <ul class="dropdown-menu">
                             <li><a href="#">-</a></li>
                         </ul>
                     </div><!-- /btn-group -->
                     <div class="btn-group">
-                        <button type="button" class="btn btn-primary">2. Game Winner</button>
+                        <button type="button" class="btn btn-primary">二回戦突破</button>
                         <button type="button" class="btn btn-next dropdown-toggle" data-toggle="dropdown"><span class="caret"></span></button>
                         <ul class="dropdown-menu">
                             <li><a href="#">-</a></li>
                         </ul>
                     </div><!-- /btn-group -->
                     <div class="btn-group">
-                        <button type="button" class="btn btn-primary">3. Game Winner</button>
+                        <button type="button" class="btn btn-primary">三回戦突破</button>
                         <button type="button" class="btn btn-step dropdown-toggle" data-toggle="dropdown"><span class="caret"></span></button>
                         <ul class="dropdown-menu">
                             <li><a href="#">-</a></li>
                         </ul>
                     </div><!-- /btn-group -->
                     <div class="btn-group">
-                        <button type="button" class="btn btn-primary">4. Game Winner</button>
+                        <button type="button" class="btn btn-primary">準々決勝突破</button>
                         <button type="button" class="btn btn-sakura dropdown-toggle" data-toggle="dropdown"><span class="caret"></span></button>
                         <ul class="dropdown-menu">
                             <li><a href="#">-</a></li>
