--- a/next.html
+++ b/next.html
@@ -21,10 +21,10 @@
         <a class="navbar-brand" href="index.html">第95回全国高校野球選手権記念大会</a>
         <div class="nav-collapse collapse">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="index.html">主页</a></li>
+            <li><a href="index.html">主页</a></li>
             <li><a href="about.html">关于</a></li>
             <li><a href="past.html">来年</a></li>
-            <li><a href="#">突破</a></li>
+            <li class="active"><a href="#">突破</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
@@ -38,7 +38,7 @@
                                     <h4>一回戦突破</h4>
                                 </a>
                             </div>
-                            <div id="collapseOne2" class="accordion-body collapse">
+                            <div id="collapseOne2" class="accordion-body collapse in">
                                 <div class="accordion-inner">
                                     <div class="btn-group">
                                         <button type="button" class="btn btn-success">有田工</button>
@@ -206,6 +206,28 @@
                             <li><a href="#">- </a></li>
                         </ul>
                     </div><!-- /btn-group -->
+                    <div class="btn-group">
+                        <button type="button" class="btn btn-success">前橋育英</button>
+                        <button type="button" class="btn btn-success dropdown-toggle" data-toggle="dropdown"><span class="caret"></span></button>
+                        <ul class="dropdown-menu">
+                            <li><a href="http://www.asahi.com/koshien/hs/10/11053/">(群馬)初出場</a></li>
+                            <li class="divider"></li>
+                            <li class="dropdown-header">この夏の甲子園戦績</li>
+                            <li><a href="http://www.asahi.com/koshien/95/sokuhou/2013081261/">1. 1-0 岩国商</a></li>
+                            <li><a href="#">- </a></li>
+                        </ul>
+                    </div><!-- /btn-group -->
+                    <div class="btn-group">
+                        <button type="button" class="btn btn-success">樟南</button>
+                        <button type="button" class="btn btn-success dropdown-toggle" data-toggle="dropdown"><span class="caret"></span></button>
+                        <ul class="dropdown-menu">
+                            <li><a href="http://www.asahi.com/koshien/hs/46/48007/">(鹿児島)４年ぶり１８回目</a></li>
+                            <li class="divider"></li>
+                            <li class="dropdown-header">この夏の甲子園戦績</li>
+                            <li><a href="http://www.asahi.com/koshien/95/sokuhou/2013081262/">1. 1-0 佐世保実</a></li>
+                            <li><a href="#">- </a></li>
+                        </ul>
+                    </div><!-- /btn-group -->
                                     <!-- Next -->
                                 </div>
                             </div>
@@ -218,6 +240,17 @@
                             </div>
                             <div id="collapseTwo2" class="accordion-body collapse">
                                 <div class="accordion-inner">
+                    <div class="btn-group">
+                        <button type="button" class="btn btn-success">延岡学園</button>
+                        <button type="button" class="btn btn-success dropdown-toggle" data-toggle="dropdown"><span class="caret"></span></button>
+                        <ul class="dropdown-menu">
+                            <li><a href="http://www.asahi.com/koshien/hs/45/47005/">(宮崎)３年ぶり７回目</a></li>
+                            <li class="divider"></li>
+                            <li class="dropdown-header">この夏の甲子園戦績</li>
+                            <li><a href="http://www.asahi.com/koshien/95/sokuhou/2013081263/">1. 4-2 自由ケ丘</a></li>
+                            <li><a href="#">- </a></li>
+                        </ul>
+                    </div><!-- /btn-group -->
                                 </div>
                             </div><!-- /accordion-body -->
                         </div><!-- /accordion-group -->
