--- a/past.html
+++ b/past.html
@@ -21,9 +21,9 @@
         <a class="navbar-brand" href="index.html">第95回全国高校野球選手権記念大会</a>
         <div class="nav-collapse collapse">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="index.html">主页</a></li>
+            <li><a href="index.html">主页</a></li>
             <li><a href="about.html">关于</a></li>
-            <li><a href="#">来年</a></li>
+            <li class="active"><a href="#">来年</a></li>
             <li><a href="next.html">突破</a></li>
           </ul>
         </div><!--/.nav-collapse -->
@@ -38,7 +38,7 @@
                                     <h4>初戦 T T</h4>
                                 </a>
                             </div>
-                            <div id="collapseOnep" class="accordion-body collapse">
+                            <div id="collapseOnep" class="accordion-body collapse in">
                                 <div class="accordion-inner">
                                     <div class="btn-group">
                                         <button type="button" class="btn btn-default">大垣日大</button>
@@ -181,6 +181,47 @@
                                             <li><a href="http://www.asahi.com/koshien/95/sokuhou/2013081163/">0-6 聖愛</a></li>
                                         </ul>
                                     </div><!-- /btn-group -->
+                    <div class="btn-group">
+                        <button type="button" class="btn btn-default">石見智翠館</button>
+                        <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown"><span class="caret"></span></button>
+                        <ul class="dropdown-menu">
+                            <li><a href="http://www.asahi.com/koshien/hs/34/36021/">(島根)８年ぶり８回目</a></li>
+                            <li class="divider"></li>
+                            <li class="dropdown-header">この夏の甲子園戦績</li>
+                            <li><a href="http://www.asahi.com/koshien/95/sokuhou/2013081164/">1-4 西脇工</a></li>
+                        </ul>
+                    </div><!-- /btn-group -->
+                                    <div class="btn-group">
+                        <button type="button" class="btn btn-default">岩国商</button>
+                        <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown"><span class="caret"></span></button>
+                        <ul class="dropdown-menu">
+                            <li><a href="http://www.asahi.com/koshien/hs/35/37004/">(山口)２７年ぶり４回目</a></li>
+                            <li class="divider"></li>
+                            <li class="dropdown-header">この夏の甲子園戦績</li>
+                            <li><a href="http://www.asahi.com/koshien/95/sokuhou/2013081261/">0-1 前橋育英</a></li>
+                        </ul>
+                    </div><!-- /btn-group -->
+                    <div class="btn-group">
+                        <button type="button" class="btn btn-default">佐世保実</button>
+                        <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown"><span class="caret"></span></button>
+                        <ul class="dropdown-menu">
+                            <li><a href="http://www.asahi.com/koshien/hs/42/44023/">(長崎)２年連続５回目</a></li>
+                            <li class="divider"></li>
+                            <li class="dropdown-header">この夏の甲子園戦績</li>
+                            <li><a href="http://www.asahi.com/koshien/95/sokuhou/2013081262/">0-1 樟南</a></li>
+                        </ul>
+                    </div><!-- /btn-group -->
+                    <div class="btn-group">
+                        <button type="button" class="btn btn-default">自由ケ丘</button>
+                        <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown"><span class="caret"></span></button>
+                        <ul class="dropdown-menu">
+                            <li><a href="http://www.asahi.com/koshien/hs/40/42136/">(福岡)初出場</a></li>
+                            <li class="divider"></li>
+                            <li class="dropdown-header">この夏の甲子園戦績</li>
+                            <li><a href="http://www.asahi.com/koshien/95/sokuhou/2013081263/">2-4 延岡学園</a></li>
+                        </ul>
+                    </div><!-- /btn-group -->
+
                                     <!-- Past -->
                                 </div>
                             </div>
