当日比赛&赛程更新

--- a/next.html
+++ b/next.html
@@ -251,6 +251,50 @@
                             <li><a href="#">- </a></li>
                         </ul>
                     </div><!-- /btn-group -->
+                                    <div class="btn-group">
+                                        <button type="button" class="btn btn-success">横浜</button>
+                                        <button type="button" class="btn btn-success dropdown-toggle" data-toggle="dropdown"><span class="caret"></span></button>
+                                        <ul class="dropdown-menu">
+                                            <li><a href="http://www.asahi.com/koshien/hs/14/16186/">(神奈川)２年ぶり１５回目</a></li>
+                                            <li class="divider"></li>
+                                            <li class="dropdown-header">この夏の甲子園戦績</li>
+                                            <li><a href="http://www.asahi.com/koshien/95/sokuhou/2013081361/">1. 7-1 丸亀</a></li>
+                                            <li><a href="#">- </a></li>
+                                        </ul>
+                                    </div><!-- /btn-group -->
+                                    <div class="btn-group">
+                                        <button type="button" class="btn btn-success">日大山形</button>
+                                        <button type="button" class="btn btn-success dropdown-toggle" data-toggle="dropdown"><span class="caret"></span></button>
+                                        <ul class="dropdown-menu">
+                                            <li><a href="http://www.asahi.com/koshien/hs/5/6034/">(山形)６年ぶり１６回目</a></li>
+                                            <li class="divider"></li>
+                                            <li class="dropdown-header">この夏の甲子園戦績</li>
+                                            <li><a href="http://www.asahi.com/koshien/95/sokuhou/2013081362/">1. 7-1 日大三</a></li>
+                                            <li><a href="#">- </a></li>
+                                        </ul>
+                                    </div><!-- /btn-group -->
+                                    <div class="btn-group">
+                                        <button type="button" class="btn btn-success">花巻東</button>
+                                        <button type="button" class="btn btn-success dropdown-toggle" data-toggle="dropdown"><span class="caret"></span></button>
+                                        <ul class="dropdown-menu">
+                                            <li><a href="http://www.asahi.com/koshien/hs/3/4059/">(岩手)２年ぶり７回目</a></li>
+                                            <li class="divider"></li>
+                                            <li class="dropdown-header">この夏の甲子園戦績</li>
+                                            <li><a href="http://www.asahi.com/koshien/95/sokuhou/2013081363/">1. 9-5 彦根東</a></li>
+                                            <li><a href="#">- </a></li>
+                                        </ul>
+                                    </div><!-- /btn-group -->
+                                    <div class="btn-group">
+                                        <button type="button" class="btn btn-success">明徳義塾</button>
+                                        <button type="button" class="btn btn-success dropdown-toggle" data-toggle="dropdown"><span class="caret"></span></button>
+                                        <ul class="dropdown-menu">
+                                            <li><a href="http://www.asahi.com/koshien/hs/39/41017/">(高知)４年連続１５回目</a></li>
+                                            <li class="divider"></li>
+                                            <li class="dropdown-header">この夏の甲子園戦績</li>
+                                            <li><a href="http://www.asahi.com/koshien/95/sokuhou/2013081364/">1. 2-1 瀬戸内</a></li>
+                                            <li><a href="#">- </a></li>
+                                        </ul>
+                                    </div><!-- /btn-group -->
                                 </div>
                             </div><!-- /accordion-body -->
                         </div><!-- /accordion-group -->
