--- a/past.html
+++ b/past.html
@@ -221,7 +221,46 @@
                             <li><a href="http://www.asahi.com/koshien/95/sokuhou/2013081263/">2-4 延岡学園</a></li>
                         </ul>
                     </div><!-- /btn-group -->
-
+                                    <div class="btn-group">
+                                        <button type="button" class="btn btn-default">丸亀</button>
+                                        <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown"><span class="caret"></span></button>
+                                        <ul class="dropdown-menu">
+                                            <li><a href="http://www.asahi.com/koshien/hs/36/38022/">(香川)１３年ぶり４回目</a></li>
+                                            <li class="divider"></li>
+                                            <li class="dropdown-header">この夏の甲子園戦績</li>
+                                            <li><a href="http://www.asahi.com/koshien/95/sokuhou/2013081361/">1-7 横浜</a></li>
+                                        </ul>
+                                    </div><!-- /btn-group -->
+                                    <div class="btn-group">
+                                        <button type="button" class="btn btn-default">日大三</button>
+                                        <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown"><span class="caret"></span></button>
+                                        <ul class="dropdown-menu">
+                                            <li><a href="http://www.asahi.com/koshien/hs/13/15112/">(西東京)３年連続１６回目</a></li>
+                                            <li class="divider"></li>
+                                            <li class="dropdown-header">この夏の甲子園戦績</li>
+                                            <li><a href="http://www.asahi.com/koshien/95/sokuhou/2013081362/">1-7 日大山形</a></li>
+                                        </ul>
+                                    </div><!-- /btn-group -->
+                                    <div class="btn-group">
+                                        <button type="button" class="btn btn-default">彦根東</button>
+                                        <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown"><span class="caret"></span></button>
+                                        <ul class="dropdown-menu">
+                                            <li><a href="http://www.asahi.com/koshien/hs/25/27035/">(滋賀)初出場</a></li>
+                                            <li class="divider"></li>
+                                            <li class="dropdown-header">この夏の甲子園戦績</li>
+                                            <li><a href="http://www.asahi.com/koshien/95/sokuhou/2013081363/">5-9 花巻東</a></li>
+                                        </ul>
+                                    </div><!-- /btn-group -->
+                                    <div class="btn-group">
+                                        <button type="button" class="btn btn-default">瀬戸内</button>
+                                        <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown"><span class="caret"></span></button>
+                                        <ul class="dropdown-menu">
+                                            <li><a href="http://www.asahi.com/koshien/hs/32/34006/">(広島)１３年ぶり２回目</a></li>
+                                            <li class="divider"></li>
+                                            <li class="dropdown-header">この夏の甲子園戦績</li>
+                                            <li><a href="http://www.asahi.com/koshien/95/sokuhou/2013081364/">1-2 明徳義塾</a></li>
+                                        </ul>
+                                    </div><!-- /btn-group -->
                                     <!-- Past -->
                                 </div>
                             </div>
