--- a/about.html
+++ b/about.html
@@ -69,29 +69,8 @@
                         </ul>
                     </div><!-- /btn-group -->
                     <div class="btn-group">
-                        <button type="button" class="btn btn-primary">一回戦突破</button>
+                        <button type="button" class="btn btn-success">Win</button>
                         <button type="button" class="btn btn-success dropdown-toggle" data-toggle="dropdown"><span class="caret"></span></button>
-                        <ul class="dropdown-menu">
-                            <li><a href="#">-</a></li>
-                        </ul>
-                    </div><!-- /btn-group -->
-                    <div class="btn-group">
-                        <button type="button" class="btn btn-primary">二回戦突破</button>
-                        <button type="button" class="btn btn-next dropdown-toggle" data-toggle="dropdown"><span class="caret"></span></button>
-                        <ul class="dropdown-menu">
-                            <li><a href="#">-</a></li>
-                        </ul>
-                    </div><!-- /btn-group -->
-                    <div class="btn-group">
-                        <button type="button" class="btn btn-primary">三回戦突破</button>
-                        <button type="button" class="btn btn-step dropdown-toggle" data-toggle="dropdown"><span class="caret"></span></button>
-                        <ul class="dropdown-menu">
-                            <li><a href="#">-</a></li>
-                        </ul>
-                    </div><!-- /btn-group -->
-                    <div class="btn-group">
-                        <button type="button" class="btn btn-primary">準々決勝突破</button>
-                        <button type="button" class="btn btn-sakura dropdown-toggle" data-toggle="dropdown"><span class="caret"></span></button>
                         <ul class="dropdown-menu">
                             <li><a href="#">-</a></li>
                         </ul>
@@ -105,22 +84,36 @@
                         </ul>
                     </div><!-- /btn-group -->
                     <div class="btn-group">
-                        <button type="button" class="btn btn-next">2 Wins</button>
+                        <button type="button" class="btn btn-success">2 Wins</button>
                         <button type="button" class="btn btn-next dropdown-toggle" data-toggle="dropdown"><span class="caret"></span></button>
                         <ul class="dropdown-menu">
                             <li><a href="#">-</a></li>
                         </ul>
                     </div><!-- /btn-group -->
                     <div class="btn-group">
-                        <button type="button" class="btn btn-step">3 Wins</button>
+                        <button type="button" class="btn btn-success">3 Wins</button>
                         <button type="button" class="btn btn-step dropdown-toggle" data-toggle="dropdown"><span class="caret"></span></button>
                         <ul class="dropdown-menu">
                             <li><a href="#">-</a></li>
                         </ul>
                     </div><!-- /btn-group -->
                     <div class="btn-group">
-                        <button type="button" class="btn btn-sakura">4 Wins</button>
+                        <button type="button" class="btn btn-success">4 Wins</button>
                         <button type="button" class="btn btn-sakura dropdown-toggle" data-toggle="dropdown"><span class="caret"></span></button>
+                        <ul class="dropdown-menu">
+                            <li><a href="#">-</a></li>
+                        </ul>
+                    </div><!-- /btn-group -->
+                    <div class="btn-group">
+                        <button type="button" class="btn btn-success">5 Wins</button>
+                        <button type="button" class="btn btn-warning dropdown-toggle" data-toggle="dropdown"><span class="caret"></span></button>
+                        <ul class="dropdown-menu">
+                            <li><a href="#">-</a></li>
+                        </ul>
+                    </div><!-- /btn-group -->
+                    <div class="btn-group">
+                        <button type="button" class="btn btn-success">6 Wins</button>
+                        <button type="button" class="btn btn-danger dropdown-toggle" data-toggle="dropdown"><span class="caret"></span></button>
                         <ul class="dropdown-menu">
                             <li><a href="#">-</a></li>
                         </ul>
